--- a/test/Makefile
+++ b/test/Makefile
@@ -4,21 +4,14 @@ CXXFLAGS := -std=c++0x
 
 UTILS = ..
 CFLAGS += -I$(UTILS) -I../netlink
-MODULES := $(UTILS)/coreutils $(UTILS)/bbsutils $(UTILS)/webutils $(UTILS)/netlink
+MODULES := $(UTILS)/coreutils $(UTILS)/bbsutils $(UTILS)/netlink
 
-TARGET := utest
-LIBS := -lz
-OBJS := utest.o
+LDFLAGS := -pthread
 
-LINUX_CC := gcc-4.7
-LINUX_CXX := g++-4.7
+TARGET := bbstest
+OBJS := bbstest.o
 
-LINUX_CFLAGS := $(LINUX_CFLAGS) `curl-config --cflags`
-LINUX_LIBS := `curl-config --libs`
-
-all : start_rule
-
-run :
-	./utest
+CC := gcc-4.7
+CXX := g++-4.7
 
 include ../Makefile.inc
