--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-			package="com.ssb.flatland"
+			package="com.ssb.grappix"
 			android:versionCode="1"
 			android:versionName="1.0">
 
@@ -8,9 +8,9 @@
 		 <uses-feature android:glEsVersion="0x00020000"></uses-feature>
 
 		<application android:label="@string/app_name" android:hasCode="true" android:icon="@drawable/ic_launcher">
-				<activity android:name="android.app.NativeActivity"
-									android:label="@string/app_name" android:configChanges="orientation|keyboardHidden">
-		<meta-data android:name="android.app.lib_name" android:value="grasppix" />
+				<activity android:name="com.ssb.grappix.MyNativeActivity" android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+					android:label="@string/app_name" android:configChanges="orientation|keyboardHidden">
+		<meta-data android:name="android.app.lib_name" android:value="grappix" />
 						<intent-filter>
 								<action android:name="android.intent.action.MAIN" />
 								<category android:name="android.intent.category.LAUNCHER" />
