--- a/Makefile.old
+++ b/Makefile.old
@@ -17,7 +17,7 @@ MAIN_FILES = main.cpp snake.cpp tiletest.cpp bobs.cpp simple.cpp blur.cpp map.cp
 MAINOBJ := main.o
 
 LINUX_LIBS := -lglfw -lGL -lGLEW
-OBJS := tiles.o shader.o basic_buffer.o texture.o
+OBJS := tiles.o shader.o RenderTarget.o texture.o
 OBJS += tween.o image.o 
 OBJS += distancefield.o freetype-gl/texture-atlas.o freetype-gl/texture-font.o freetype-gl/vector.o freetype-gl/edtaa3func.o
 MODULES := $(UTILS)/coreutils
