--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -4,8 +4,8 @@
 		 <uses-feature android:glEsVersion="0x00020000"/>
 
 		<application android:hasCode="true" android:icon="@drawable/ic_launcher" android:label="@string/app_name">
-				<activity android:configChanges="orientation|keyboardHidden" android:label="@string/app_name" android:name="com.ssb.grappix.MyNativeActivity" android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
-		<meta-data android:name="android.app.lib_name" android:value="demo"/>
+			<activity android:configChanges="orientation|keyboardHidden" android:label="@string/app_name" android:name="com.ssb.grappix.MyNativeActivity" android:screenOrientation="landscape" android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+				<meta-data android:name="android.app.lib_name" android:value="demo"/>
 						<intent-filter>
 								<action android:name="android.intent.action.MAIN"/>
 								<category android:name="android.intent.category.LAUNCHER"/>
