--- a/demo/Makefile
+++ b/demo/Makefile
@@ -1,21 +1,15 @@
-UTILS=../../cpp-mods
+CPP_MODS=../../cpp-mods
 GRAPPIX=..
 CHIPM=../../chipmachine
-
-#CXX=clang++
-#CC=clang
-#USE_CCACHE=1
-#HOST=android
-include $(UTILS)/config.mk
+include $(CPP_MODS)/config.mk
 
 OBJDIR := obj/
 TARGET := demo
-CFLAGS += -Wall -g -O2
-CXXFLAGS += -std=c++0x
+CFLAGS += -Wall -g -O2 -DMUSIC
 
 include $(CHIPM)/src/plugins/ModPlugin/module.mk
-include $(UTILS)/coreutils/module.mk
-include $(UTILS)/audioplayer/module.mk
+include $(CPP_MODS)/coreutils/module.mk
+include $(CPP_MODS)/audioplayer/module.mk
 include $(GRAPPIX)/module.mk
 
 INCLUDES += $(CHIPM)/src
@@ -24,38 +18,14 @@ DATA_FILES += data/ObelixPro.ttf data/test.mod
 
 ANDROID_PROJECT := android
 
-ifeq ($(HOST),android)
-  #ADK=/opt/arm-linux-androideabi
-  #SDK=/opt/android-sdk-linux
-  TARGET_EXT := .apk
-  #LDFLAGS += --sysroot=/opt/android-ndk-r9/platforms/android-14/arch-arm
-  #LOCAL_FILES += android/android_native_app_glue.c
-  #CFLAGS += -Iandroid 
-  #-I$(ADK)/include -I$(ADK)/include/freetype2
-  #LIBS += $(ADK)/lib/libfreetype.a $(ADK)/lib/libpng.a -lz -llog -landroid -lEGL -lGLESv2
-  #LDFLAGS += -lz -llog -landroid -lEGL -lGLESv2
-  #LDFLAGS += -lOpenSLES
-  #LOCAL_FILES += AudioPlayerSL.cpp
-  CFLAGS += -DMUSIC
-else ifeq ($(HOST),emscripten)
- # LDFLAGS += -s TOTAL_MEMORY=67108864
-  # -s DISABLE_EXCEPTION_CATCHING=0
-  # -s OUTLINING_LIMIT=30000
-  #LDFLAGS += -s EXPORTED_FUNCTIONS="['_main', '_set_searchstring', '_play_index']"
+ifeq ($(HOST),emscripten)
+  # LDFLAGS += -s TOTAL_MEMORY=67108864 -s DISABLE_EXCEPTION_CATCHING=0 -s OUTLINING_LIMIT=30000
+  # LDFLAGS += -s EXPORTED_FUNCTIONS="['_main', '_set_searchstring', '_play_index']"
   LDFLAGS += -s DISABLE_EXCEPTION_CATCHING=2
   TARGETDIR := html/
-  CFLAGS += -DMUSIC
-  #LOCAL_FILES += AudioPlayer.cpp MusicPlayer.cpp Fifo.cpp
-else
-  CFLAGS += -DMUSIC
-  #LOCAL_FILES += AudioPlayer.cpp MusicPlayer.cpp Fifo.cpp
-  #LOCAL_DIRS += fft
-  CFLAGS += -pthread
-  LDFLAGS += -pthread -lpthread
 endif
 
 LOCAL_FILES := MusicPlayer.cpp
-
 
 ## Hack that lets us run the currently open file from Sublime if it is one of the main files
 MAIN_FILES = demo.cpp bobs.cpp snake.cpp tiletest2.cpp simple.cpp blur.cpp map.cpp
@@ -69,4 +39,4 @@ endif
 CFLAGS += -DMODPLUG_BASIC_SUPPORT
 LOCAL_FILES += $(MAIN_FILE)
 
-include $(UTILS)/build.mk
+include $(CPP_MODS)/build.mk
