LUA: Cleaned up unecessary methods. Added support for string vector <-> lua table

--- a/lua/Makefile
+++ b/lua/Makefile
@@ -3,7 +3,7 @@ include ../coreutils/module.mk
 include module.mk
 
 TARGET := luatest
-CFLAGS :=  -I../test -DUNIT_TEST
+CFLAGS += -I../test -DUNIT_TEST
 LOCAL_FILES := ../test/catch.cpp luainterpreter.cpp
 
 include ../build.mk
