Better luainterpreter, some other fixes

--- a/sqlite3/CMakeLists.txt
+++ b/sqlite3/CMakeLists.txt
@@ -3,7 +3,7 @@ project(cpp-mods.sqlite3)
 
 
 set(SOURCE_FILES database.cpp sqlite3.c)
-add_definitions(-std=c++0x -O2 -DSQLITE_ENABLE_FTS3 -DSQLITE_ENABLE_FTS3_PARENTHESIS)
+add_definitions(-DSQLITE_ENABLE_FTS3 -DSQLITE_ENABLE_FTS3_PARENTHESIS)
 
 
 add_library(sqlite3 ${SOURCE_FILES})
