CMake build system under way

--- a/tween/CMakeLists.txt
+++ b/tween/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8.4)
 project(cpp-mods.tween)
 
-add_definitions(-std=c++0x -O2)
+set(CMAKE_CXX_FLAGS "-std=c++0x")
 
 add_library(tween tween.cpp)
