CMake now build chipmachine

--- a/coreutils/CMakeLists.txt
+++ b/coreutils/CMakeLists.txt
@@ -3,6 +3,6 @@ project(cpp-mods.coreutils)
 
 
 set(SOURCE_FILES file.cpp format.cpp log.cpp utils.cpp)
-add_definitions(-std=c++0x -O2)
+set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} --std=c++0x)
 
 add_library(coreutils ${SOURCE_FILES})
