--- a/musicplayer/plugins/NDSPlugin/CMakeLists.txt
+++ b/musicplayer/plugins/NDSPlugin/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 2.8.4)
 project(cpp-mods.musicplayer.ndsplugin)
 
+set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-std=c++0x")
+
 set(SOURCE_FILES
 	NDSPlugin.cpp
 	nds/vio2sf/vio2sf.c
