--- a/musicplayer/plugins/UADEPlugin/CMakeLists.txt
+++ b/musicplayer/plugins/UADEPlugin/CMakeLists.txt
@@ -30,4 +30,6 @@ SET(SOURCE_FILES
 
 include_directories(../.. uade/src/include uade/src/frontends/include uade/src/frontends/common)
 
+set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "--std=c++0x")
+
 add_library(uadeplugin ${SOURCE_FILES})
