--- a/musicplayer/plugins/USFPlugin/CMakeLists.txt
+++ b/musicplayer/plugins/USFPlugin/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 2.8.4)
 project(cpp-mods.musicplayer.usfplugin)
 
+set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-std=c++0x")
+
 set(SOURCE_FILES
 	resampler.c
 	USFPlugin.cpp
