--- a/musicplayer/plugins/gmeplugin/CMakeLists.txt
+++ b/musicplayer/plugins/gmeplugin/CMakeLists.txt
@@ -5,7 +5,8 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
 
 file(GLOB SOURCE_FILES gme/*.cpp)
 add_definitions(-DBLARGG_LITTLE_ENDIAN -DHAVE_ZLIB_H)
-find_library(Z_LIBRARY z)
-
+#find_library(Z_LIBRARY z)
+find_package(zlib REQUIRED)
+include_directories(${ZLIB_INCLUDE_DIRS})
 add_library(gmeplugin GMEPlugin.cpp ${SOURCE_FILES})
-target_link_libraries(gmeplugin ${Z_LIBRARY})
+target_link_libraries(gmeplugin ${ZLIB_LIBRARIES})
