Replaced libpng with lodepng

--- a/image/CMakeLists.txt
+++ b/image/CMakeLists.txt
@@ -1,14 +1,12 @@
 cmake_minimum_required(VERSION 2.8.4)
 project(cpp-mods.image)
 
-set(SOURCE_FILES image.cpp packer.cpp)
+set(SOURCE_FILES image.cpp lodepng.cpp packer.cpp)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
 
-
-
-find_package(PNG REQUIRED)
-include_directories(${PNG_INCLUDE_DIRS})
-add_definitions(${PNG_DEFINITIONS})
+#find_package(PNG REQUIRED)
+#include_directories(${PNG_INCLUDE_DIRS})
+#add_definitions(${PNG_DEFINITIONS})
 
 add_library(image ${SOURCE_FILES})
-target_link_libraries(image ${PNG_LIBRARIES})
+#target_link_libraries(image ${PNG_LIBRARIES})
