--- a/audioplayer/CMakeLists.txt
+++ b/audioplayer/CMakeLists.txt
@@ -6,11 +6,13 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
 
 set(SOURCE_FILES audioplayer.cpp)
 
-find_package(SDL)
-set(EXTRA_LIBS ${EXTRA_LIBS} ${SDL_LIBRARY})
-include_directories(${SDL_INCLUDE_DIR})
-add_definitions(-DSDL_AUDIO)
-set(SOURCE_FILES ${SOURCE_FILES} player_sdl.cpp)
+if(APPLE)
+	find_package(SDL)
+	set(EXTRA_LIBS ${EXTRA_LIBS} ${SDL_LIBRARY})
+	include_directories(${SDL_INCLUDE_DIR})
+	add_definitions(-DSDL_AUDIO)
+	set(SOURCE_FILES ${SOURCE_FILES} player_sdl.cpp)
+endif()
 
 add_library(audioplayer ${SOURCE_FILES})
 target_link_libraries(audioplayer ${EXTRA_LIBS})
