--- a/grappix/CMakeLists.txt
+++ b/grappix/CMakeLists.txt
@@ -3,24 +3,21 @@ project(cpp-mods.grappix)
 
 file(GLOB MAIN_FILES grappix/*.cpp)
 file(GLOB FREETYPE_FILES grappix/freetype-gl/*.c)
-set(SOURCE_FILES ${MAIN_FILES} ${FREETYPE_FILES} grappix/specific/window_pc.cpp)
+set(SOURCE_FILES ${MAIN_FILES} ${FREETYPE_FILES})
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
-
 
 add_subdirectory(../image image)
 add_subdirectory(../tween tween)
 
-if (NOT TARGET coreutils)
+if(NOT TARGET coreutils)
 	add_subdirectory(../coreutils coreutils)
 endif()
 
-if (NOT TARGET freetype)
+if(NOT TARGET freetype)
   add_subdirectory(../freetype freetype)
 message("FREETYPE-2 ${FREETYPE_INCLUDE_DIR}")
 endif()
-
-
 
 if(APPLE)
    find_library(COCOA_LIBRARY Cocoa)
@@ -30,37 +27,13 @@ if(APPLE)
 endif()
 
 
-#find_path(FREETYPE_INCLUDE_DIR ft2build.h
-#  HINTS
-#    ENV FREETYPE_DIR
-#  PATHS
-#    /usr/X11R6
-#    /usr/local/X11R6
-#    /usr/local/X11
-#    /usr/local
-#    ENV GTKMM_BASEPATH
-#    [HKEY_CURRENT_USER\\SOFTWARE\\gtkmm\\2.4;Path]
-#    [HKEY_LOCAL_MACHINE\\SOFTWARE\\gtkmm\\2.4;Path]
-#  PATH_SUFFIXES include/freetype2 include
-#)
-#
-#find_library(FREETYPE_LIBRARY
-#  NAMES freetype libfreetype freetype219
-#  HINTS
-#    ENV FREETYPE_DIR
-#  PATH_SUFFIXES lib
-#  PATHS
-#    /usr/X11R6
-#    /usr/local/X11R6
-#    /usr/local/X11
-#    /usr/freeware
-#    /usr/local
-#    ENV GTKMM_BASEPATH
-#    [HKEY_CURRENT_USER\\SOFTWARE\\gtkmm\\2.4;Path]
-#    [HKEY_LOCAL_MACHINE\\SOFTWARE\\gtkmm\\2.4;Path]
-#)
-
-if(APPLE)
+if(RASPBERRY)
+  set(VC ${PI_SYS_ROOT}/vc)
+  set(SOURCE_FILES ${SOURCE_FILES} grappix/specific/window_pi.cpp grappix/specific/eglutil.cpp)
+  set(EXTRA_LIBS ${EXTRA_LIBS} EGL GLESv2 vcos vchiq_arm bcm_host)
+  include_directories(${VC}/include ${VC}/include/interface/vcos/pthreads ${VC}/include/interface/vmcs_host/linux)
+elseif(UNIX)
+  set(SOURCE_FILES ${SOURCE_FILES} grappix/specific/window_pc.cpp)
   find_package(OpenGL REQUIRED)
   find_package(GLEW REQUIRED)
   find_library(GLFW_LIBRARY glfw3 REQUIRED)
@@ -73,22 +46,7 @@ if(APPLE)
 
   set(EXTRA_LIBS ${EXTRA_LIBS} ${GLFW_LIBRARY})
 
-else() # PI
-  set(VC $(PI_SDK)/vc)
-  set(SOURCE_FILES ${SOURCE_FILES} grappix/specific/window_pi.cpp grappix/specific/eglutil.cpp)
-  set(EXTRA_LIBS ${EXTRA_LIBS} EGL GLESv2 vcos vchiq_arm bcm_host)
-  include_directories(${VC}/include ${VC}/include/interface/vcos/pthreads ${VC}/include/interface/vmcs_host/linux)
-
 endif()
-
-#if(FREETYPE_LIBRARY)
-#	set(EXTRA_LIBS ${EXTRA_LIBS} ${FREETYPE_LIBRARY})
-#	include_directories(${FREETYPE_INCLUDE_DIR})
-#	add_definitions(-DWITH_FREETYPE)
-#else()
-#	message(FATAL_ERROR "Could not find freetype")
-#endif()
-
 
 message("GLEW LIBS " ${GLEW_LIBRARIES})
 
@@ -96,7 +54,9 @@ add_definitions(-DWITH_FREETYPE)
 include_directories(${FREETYPE_INCLUDE_DIR})
 
 #LIBS += -lglfw3 -framework Cocoa -framework IOKit -framework CoreVideo -framework OpenGL -lGLEW
-#set(EXTRA_LIBS ${EXTRA_LIBS} -lX11 -lXxf86vm -lXrandr -lpthread -lXi -lXinerama -lXcursor)
+#if(UNIX)
+#	set(EXTRA_LIBS ${EXTRA_LIBS} -lX11 -lXxf86vm -lXrandr -lpthread -lXi -lXinerama -lXcursor)
+#endif()
 
 file(GLOB SHADERS grappix/shaders/*.glsl)
 file(MAKE_DIRECTORY .shader) 
