--- a/audioplayer/CMakeLists.txt
+++ b/audioplayer/CMakeLists.txt
@@ -13,8 +13,8 @@ if(APPLE)
 	set(SOURCE_FILES ${SOURCE_FILES} player_sdl.cpp)
 else()
 	add_definitions(-DLINUX)
-	find_library(ASOUND_LIBRARY asound)
-	find_path(ASOUND_INCLUDE alsa/asoundlib.h)
+	find_library(ASOUND_LIBRARY asound REQUIRED)
+	find_path(ASOUND_INCLUDE alsa/asoundlib.h REQUIRED)
 	set(EXTRA_LIBS ${EXTRA_LIBS} ${ASOUND_LIBRARY})
 	include_directories(${ASOUND_INCLUDE})
 endif()
