--- a/musicplayer/plugins/htplugin/CMakeLists.txt
+++ b/musicplayer/plugins/htplugin/CMakeLists.txt
@@ -16,6 +16,9 @@ set(SOURCE_FILES
 
 #htplugin_CFLAGS += -mfpu=neon-ftree-vectorizer-verbose=1 -fpredictive-commoning -fgcse-after-reload -ftree-vectorize -fipa-cp-clone
 #-O3 -ffast-math -finline-functions -funswitch-loops
+
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-pointer-sign -Wno-incompatible-pointer-types")
+
 include_directories(.)
 add_definitions(-DEMU_COMPILE -DEMU_LITTLE_ENDIAN -DUSE_M68K -DHAVE_STDINT_H -DLSB_FIRST -DHAVE_MPROTECT)
 
