--- a/musicplayer/plugins/gsfplugin/CMakeLists.txt
+++ b/musicplayer/plugins/gsfplugin/CMakeLists.txt
@@ -26,4 +26,8 @@ endif()
 add_definitions(-DLINUX -DC_CORE)
 include_directories(playgsf playgsf/libresample-0.1.3/include ..)
 
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-implicit-function-declaration -Wno-incompatible-pointer-types -Wno-parentheses-equality -Wno-dangling-else")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-implicit-function-declaration -Wno-incompatible-pointer-types -Wno-parentheses-equality -Wno-dangling-else")
+
+
 add_library(gsfplugin ${SOURCE_FILES})
