--- a/musicplayer/plugins/heplugin/CMakeLists.txt
+++ b/musicplayer/plugins/heplugin/CMakeLists.txt
@@ -22,6 +22,7 @@ set(SOURCE_FILES
 add_definitions(-DEMU_COMPILE -DEMU_LITTLE_ENDIAN)
 
 #htplugin_LDFLAGS := -Wl,--fix-cortex-a8
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-pointer-sign -Wno-implicit-function-declaration -Wno-incompatible-pointer-types")
 
 include_directories(he)
 
