--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -12,13 +12,13 @@ set(CPP_MODS_MODULES
 	coreutils
 	audioplayer
 	grappix
-	bbsutils
+	#bbsutils
 	fft
 	archive
-	webutils
-	json
-	luainterpreter
-	sqlite3
+	#webutils
+	#json
+	#luainterpreter
+	#sqlite3
 )
 add_subdirectory(${CPP_MODS} cppmods)
 
@@ -26,7 +26,7 @@ add_subdirectory(${CPP_MODS}/musicplayer/plugins/modplugin modplugin)
 
 include_directories(${CPP_MODS}/grappix)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --std=c++0x")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
 
 add_executable(simple simple.cpp)
 target_link_libraries(simple coreutils grappix)
