--- a/mods/musicplayer/plugins/mp3plugin/CMakeLists.txt
+++ b/mods/musicplayer/plugins/mp3plugin/CMakeLists.txt
@@ -4,24 +4,26 @@ project(cpp-mods.musicplayer.mp3plugin)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
 set(SOURCE_FILES MP3Plugin.cpp)
 
-#find_library(MPG123_LIBRARY mpg123)
-#find_path(MPG123_PATH mpg123.h)
-#include_directories(${MPG123_PATH})
+find_library(MPG123_LIBRARY libmpg123.a)
+find_path(MPG123_PATH mpg123.h)
 
-#message(${MPG123_LIBRARY})
+if(${MPG123_LIBRARY})
+	include_directories(${MPG123_PATH})
+else()
+	add_subdirectory(mpg123-1.21.0/src/libmpg123 libmpg123)
+	include_directories(mpg123-1.21.0/src/libmpg123)
+	set(MPG123_LIBRARY libmpg123)
+endif()
 
-add_subdirectory(mpg123-1.21.0/src/libmpg123 libmpg123)
-include_directories(mpg123-1.21.0/src/libmpg123)
+message("MP3 " ${MPG123_LIBRARY})
 
-if (NOT TARGET crypto)
-	if (${CPP_MODS})
+if(NOT TARGET crypto)
+	if(${CPP_MODS})
 		add_subdirectory(${CPP_MODS}/crypto crypto)
 	else()
 		add_subdirectory(../../../crypto crypto)
 	endif()
 endif()
 
-
 add_library(mp3plugin ${SOURCE_FILES})
-target_link_libraries(mp3plugin libmpg123 curl)
-#${MPG123_LIBRARY})
+target_link_libraries(mp3plugin ${MPG123_LIBRARY} curl)
